# poc-django-react-session-auth

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
client/: .env.prod  Dockerfile  nginx.conf  package.json
client/src/: App.tsx  auth-context.tsx  auth-provider.tsx  routes.tsx
client/src/lib/: axios.ts  csrf-token.ts
client/src/pages/: dashboard.tsx  login.tsx
server/authentication/: serializers.py  urls.py  views.py
server/server/: settings.py  urls.py
server/server/api/: urls.py
server/server/api/docs/: urls.py
